--- a/src/pug/challenges.pug
+++ b/src/pug/challenges.pug
@@ -1,28 +1,101 @@
-- var PageTitle = 'Banjeda - Challenges';
+- var PageTitle = 'Bandeja - Challenges';
 doctype
 html
     head
         include partials/head
     body
         include components/header
-        .container.p-5
-            .row
-                .col-6
-                    h2.stroket-title.text-uppercase team one
-                    .form-group
-                        select#mselected.form-control(multiple)
-                            option(value="0" data-img="img/player.jpg")  player one
-                            option(value="1" data-img="img/player.jpg") player two
-                            option(value="2" data-img="img/player.jpg") player three
-                            option(value="3" data-img="img/player.jpg") player four
-                .col-6
-                    h2.stroket-title.text-uppercase team two
-                    .form-group
-                        select#mselected2.form-control(multiple)
-                            option(value="0" data-img="img/player.jpg")  player one
-                            option(value="1" data-img="img/player.jpg") player two
-                            option(value="2" data-img="img/player.jpg") player three
-                            option(value="3" data-img="img/player.jpg") player four
+        section.challenge
+            .container.p-5
+                .row.pt-5
+                    .col-md-6
+                        h2.stroket-title.text-uppercase.stroked-title
+                            span team one
+                        form(action="", class='form-box')
+                            .form-group.mt-3
+                                select#mselected.form-control(multiple)
+                                    option(value="0" data-img="img/player.jpg")  player one
+                                    option(value="1" data-img="img/player.jpg") player two
+                                    option(value="2" data-img="img/player.jpg") player three
+                                    option(value="3" data-img="img/player.jpg") player four
+                    .col-md-6.mt-5.mt-md-0
+                        h2.stroket-title.text-uppercase.stroked-title
+                            span team two
+                        form(action="", class='form-box')
+                            .form-group.mt-3
+                                select#mselected2.form-control(multiple)
+                                    option(value="0" data-img="img/player.jpg")  player one
+                                    option(value="1" data-img="img/player.jpg") player two
+                                    option(value="2" data-img="img/player.jpg") player three
+                                    option(value="3" data-img="img/player.jpg") player four
+                .result-box.mt-5
+                    .row
+                        .col-12.mb-5.mt-3
+                            .form-group.text-center
+                                button(type="submit" class='calc-result text-white text-capitalize') calculate expected result
+                    .row.justify-content-between.align-items-center.text-center
+                        .col-4.p-0
+                            h3.text-capitalize.bg-white.py-5 team one
+                        .col-4.p-0
+                            .result-area
+                                span 5
+                                span -
+                                span 8
+                        .col-4.p-0
+                            h3.text-capitalize.bg-white.py-5 team two
+                hr.my-5
+                .result-box.mt-5
+                    .row
+                        .col-12.mb-5.mt-3
+                            .form-group.text-center
+                                button(type="submit" class='calc-result text-white text-capitalize') actual match result
+                    .row.justify-content-between.align-items-center.text-center
+                        .col-4.p-0
+                            h3.text-capitalize.bg-white.py-5 team one
+                        .col-4.p-0
+                            .result-area
+                                span 5
+                                span -
+                                span 8
+                        .col-4.p-0
+                            h3.text-capitalize.bg-white.py-5 team two
+                hr.my-5
+                .rating-after-match.my-5
+                    h2.stroked-title.text-capitalize.text-center
+                        span.pl-4 rating after match
+                    hr.my-5
+                    .row.mt-5
+                        .col-md-6
+                            h4.text-center.text-capitalize.stroked-title
+                                span.pl-4 team one
+                            ul.mt-4
+                                li
+                                    img(src="img/player.jpg", alt="")
+                                    |   player name
+                                    span.rate.text-capitalize rating : 5
+                                li
+                                    img(src="img/player.jpg", alt="")
+                                    |   player name
+                                    span.rate.text-capitalize rating : 5
+                        .col-md-6.mt-5.mt-md-0
+                            h4.text-center.text-capitalize.stroked-title
+                                span.pl-4 team two
+                            ul.mt-4
+                                li
+                                    img(src="img/player.jpg", alt="")
+                                    |   player name
+                                    span.rate.text-capitalize rating : 5
+                                li
+                                    img(src="img/player.jpg", alt="")
+                                    |   player name
+                                    span.rate.text-capitalize rating : 5
+                        .col-12.mt-5
+                            .form-group.text-center
+                                button(type="submit" class='calc-result text-white text-capitalize') submit
+
+
+
+
         include components/sponsors
         include components/footer
         include partials/footerScripts
@@ -35,7 +108,7 @@ html
                 };
             
             $("#mselected, #mselected2").select2({
-                placeholder: "Select Player !!",
+                placeholder: "Choose Player !!",
                 width: "100%",
                 allowClear: true,
                 maximumSelectionLength: 2,
