--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ html
             .container
                 .inner-banner.px-md-3
                     .slider-wrapper
-                        .row
+                        .row.align-items-start
                             .col-lg-7
                                 .image-slider.h-100
                                     .slider--item
