--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -30,8 +30,8 @@
         width: 85%;
         letter-spacing: 25px;
         color: $mainColor;
-        background: $lightColor;
-        border: 1px solid rgba(0,0,0,.2);
+        background: #fff;
+        border: 1px solid rgba(0,0,0,.1);
         transition: letter-spacing .5s linear,
                     padding .5s linear,
                     width .5s linear,
