--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -191,7 +191,7 @@
             width: 25px;
             height: 25px;
             top: 50%;
-            margin-top: -12.2px;
+            margin-top: -.689rem;
             transition: all 0.3s cubic-bezier(.55,0,.1,1);
           }
           &:after {
