--- a/src/pug/challenges.pug
+++ b/src/pug/challenges.pug
@@ -35,14 +35,38 @@ html
                                 button(type="submit" class='calc-result text-white text-capitalize') calculate expected result
                     .row.justify-content-between.align-items-center.text-center
                         .col-4.p-0
-                            h3.text-capitalize.bg-white.py-5 team one
+                            .box.bg-white.py-5
+                                h3.text-capitalize team two
+                                ul.mt-4
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capita rating : 5
                         .col-4.p-0
                             .result-area
                                 span 5
                                 span -
                                 span 8
                         .col-4.p-0
-                            h3.text-capitalize.bg-white.py-5 team two
+                            .box.bg-white.py-5
+                                h3.text-capitalize team two
+                                ul.mt-4
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capita rating : 5
                 hr.my-5
                 .result-box.mt-5
                     .row
@@ -51,14 +75,38 @@ html
                                 button(type="submit" class='calc-result text-white text-capitalize') actual match result
                     .row.justify-content-between.align-items-center.text-center
                         .col-4.p-0
-                            h3.text-capitalize.bg-white.py-5 team one
+                            .box.bg-white.py-5
+                                h3.text-capitalize team one
+                                ul.mt-4
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
                         .col-4.p-0
                             .result-area
                                 span 5
                                 span -
                                 span 8
                         .col-4.p-0
-                            h3.text-capitalize.bg-white.py-5 team two
+                            .box.bg-white.py-5
+                                h3.text-capitalize team two
+                                ul.mt-4
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
+                                    li
+                                        a(href='profile.html')
+                                            img(src="img/player.jpg", alt="")
+                                            span player name
+                                        span.rate.text-capitalize rating : 5
                 hr.my-5
                 .rating-after-match.my-5
                     h2.stroked-title.text-capitalize.text-center
@@ -70,24 +118,28 @@ html
                                 span.pl-4 team one
                             ul.mt-4
                                 li
-                                    img(src="img/player.jpg", alt="")
-                                    |   player name
+                                    a(href='profile.html')
+                                        img(src="img/player.jpg", alt="")
+                                        span player name
                                     span.rate.text-capitalize rating : 5
                                 li
-                                    img(src="img/player.jpg", alt="")
-                                    |   player name
+                                    a(href='profile.html')
+                                        img(src="img/player.jpg", alt="")
+                                        span player name
                                     span.rate.text-capitalize rating : 5
                         .col-md-6.mt-5.mt-md-0
                             h4.text-center.text-capitalize.stroked-title
                                 span.pl-4 team two
                             ul.mt-4
                                 li
-                                    img(src="img/player.jpg", alt="")
-                                    |   player name
+                                    a(href='profile.html')
+                                        img(src="img/player.jpg", alt="")
+                                        span player name
                                     span.rate.text-capitalize rating : 5
                                 li
-                                    img(src="img/player.jpg", alt="")
-                                    |   player name
+                                    a(href='profile.html')
+                                        img(src="img/player.jpg", alt="")
+                                        span player name
                                     span.rate.text-capitalize rating : 5
                         .col-12.mt-5
                             .form-group.text-center
