--- a/src/pug/leaderboard.pug
+++ b/src/pug/leaderboard.pug
@@ -12,81 +12,106 @@ html
                         th Rank
                         th Player
                         th Rating
-                        th Sete Won
+                        th Sets Played
+                        th Sets Won
                         th Games Won
                         th Games Lost
                     tbody
                         tr
                             td 1
                             td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.name.m-0.d-inline-block.text-capitalize player name
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
                             td 5
                             td 6
                             td 8
                             td 2
-                        tr
-                            td 1
-                            td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
-                            td 5
-                            td 6
-                            td 8
                             td 2
                         tr
                             td 1
                             td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
                             td 5
                             td 6
                             td 8
                             td 2
-                        tr
-                            td 1
-                            td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
-                            td 5
-                            td 6
-                            td 8
                             td 2
                         tr
                             td 1
                             td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
                             td 5
                             td 6
                             td 8
                             td 2
-                        tr
-                            td 1
-                            td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
-                            td 5
-                            td 6
-                            td 8
                             td 2
                         tr
                             td 1
                             td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
                             td 5
                             td 6
                             td 8
                             td 2
+                            td 2
                         tr
                             td 1
                             td.player-info
-                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.name.m-0.d-inline-block.text-capitalize player name
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
                             td 5
                             td 6
                             td 8
+                            td 2
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                a(href='profile.html').avatar-prof.mr-2.rounded-circle
+                                    img(src='https://placehold.it/35x35' alt='').img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize
+                                    a(href='profile.html') player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
                             td 2
 
         include components/sponsors
