--- a/src/pug/challenges.pug
+++ b/src/pug/challenges.pug
@@ -36,7 +36,7 @@ html
                     .row.justify-content-between.align-items-center.text-center
                         .col-4.p-0
                             .box.bg-white.py-5
-                                h3.text-capitalize team two
+                                h3.text-capitalize team One
                                 ul.mt-4
                                     li
                                         a(href='profile.html')
