--- a/src/sass/pages/_challenges.scss
+++ b/src/sass/pages/_challenges.scss
@@ -264,20 +264,7 @@ section.challenge {
     }
 }
 .select2-results__option.select2-results__message {
-    position: relative;
-    padding: 1rem;
-    font-size: 0;
-    &:after {
-        content: 'You Can not Select More Than Two Players';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        font-size: .8rem;
-        padding: .5rem;
-        color: red;
-    }
+    display: none !important;
 }
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
         background: $mainColor;
